# bevy_playground

./: Cargo.toml  credits.txt
LDtkMaps/: test_1.ldtk
LDtkMaps/test_1/simplified/Level_0/: DefaultGrid.csv  data.json
notes/: parallel.txt  tile_chunks.txt
src/: background.rs  camera.rs  collision.rs  enemy.rs  lib.rs  main.rs  player.rs  projectile.rs  ui.rs
