[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking","trace"] } # Remove the dynamic_linkg feature if you release the game.
bevy_rapier2d = {version = "0.22.0", features = ["dim2", "async-collider", "debug-render-2d"]} 
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
